Bug 479936 - Correctly handle sizing of video elements